// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for variant: error, compact: false, isFocusable: true and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px calc(12 * var(--p-spacing-static-2xs));
  border-radius: var(--_p-legacy-radius-small, calc(4px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-canvas);
  background: var(--p-color-error);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  span:hover {
    background: var(--p-color-error-medium);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: error-frosted, compact: false, isFocusable: true and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px calc(12 * var(--p-spacing-static-2xs));
  border-radius: var(--_p-legacy-radius-small, calc(4px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  color: var(--p-color-primary);
  background: var(--p-color-error-frosted);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  span:hover {
    background: var(--p-color-error-frosted-soft);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: info, compact: true, isFocusable: false and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: var(--p-spacing-static-2xs) var(--p-spacing-static-sm);
  border-radius: var(--_p-legacy-radius-small, calc(1px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-canvas);
  background: var(--p-color-info);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: info-frosted, compact: true, isFocusable: false and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: var(--p-spacing-static-2xs) var(--p-spacing-static-sm);
  border-radius: var(--_p-legacy-radius-small, calc(1px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  color: var(--p-color-primary);
  background: var(--p-color-info-frosted);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: primary, compact: false, isFocusable: true and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px calc(12 * var(--p-spacing-static-2xs));
  border-radius: var(--_p-legacy-radius-small, calc(4px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-canvas);
  background: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  span:hover {
    background: var(--p-color-contrast-high);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: secondary, compact: false, isFocusable: false and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px calc(12 * var(--p-spacing-static-2xs));
  border-radius: var(--_p-legacy-radius-small, calc(4px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  color: var(--p-color-primary);
  background: var(--p-color-frosted-strong);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: success, compact: false, isFocusable: true and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px calc(12 * var(--p-spacing-static-2xs));
  border-radius: var(--_p-legacy-radius-small, calc(4px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-canvas);
  background: var(--p-color-success);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  span:hover {
    background: var(--p-color-success-medium);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: success-frosted, compact: false, isFocusable: true and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px calc(12 * var(--p-spacing-static-2xs));
  border-radius: var(--_p-legacy-radius-small, calc(4px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  color: var(--p-color-primary);
  background: var(--p-color-success-frosted);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  span:hover {
    background: var(--p-color-success-frosted-soft);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: warning, compact: true, isFocusable: false and hasIcon: false 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: var(--p-spacing-static-2xs) var(--p-spacing-static-sm);
  border-radius: var(--_p-legacy-radius-small, calc(1px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-canvas);
  background: var(--p-color-warning);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for variant: warning-frosted, compact: true, isFocusable: false and hasIcon: false 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: var(--p-spacing-static-2xs) var(--p-spacing-static-sm);
  border-radius: var(--_p-legacy-radius-small, calc(1px + (var(--p-leading-normal) / 2)));
  font: var(--p-font-weight-normal) var(--p-typescale-xs) / var(--p-leading-normal) var(--p-font-porsche-next);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  color: var(--p-color-primary);
  background: var(--p-color-warning-frosted);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), backdrop-filter var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(forced-colors:active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
    color: CanvasText;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}
"
`;
